# testcpplite

./: .clang-format  .gitignore  CMakeLists.txt  Jenkinsfile  LICENSE  README.md
.github/workflows/: cmake-build-test.yml  cmake-build-tests-then-ctest.yml
docker/clang/: Dockerfile
docker/gcc/: Dockerfile
lib/: CMakeLists.txt  testcpplite.cpp
lib/include/sbash64/testcpplite/: testcpplite.hpp
src/: CMakeLists.txt  testcpp.cpp  testcpplite.cpp
src/include/testcpp/: testcpp.hpp
src/include/testcpplite/: testcpplite.hpp
test/: CMakeLists.txt  main.cpp  tbd.cpp
